Fixing download links, reorder books

--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,5 +1,81 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
+    <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+        <a href="#" id="espinhaco">
+            <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
+        </a>
+    </div>
+
+    <div class="description col-sm-8 col-md-8 col-lg-8">
+        <h4>
+            <a href="#" id="espinhaco2">
+                PLANO DE AÇÃO NACIONAL PARA A CONSERVAÇÃO DA FLORA AMEAÇADA DE EXTINÇÃO DA SERRA DO ESPINHACO MERIDIONAL
+            </a>
+        </h4>
+        <p>O <i>Plano de Ação Nacional para a conservação da flora
+            ameaçada de extinção da Serra do Espinhaço Meridional </i>
+        contém uma série de ações elaboradas para mitigar as
+        ameaças que incidem neste território do estado de Minas
+        Gerais. Na Serra do Espinhaço Meridional ocorrem 256
+        espécies da flora ameaçada. Nesta publicação há informações
+        sobre aspectos ambientais, socioeconômicos e
+        histórico-culturais desse território alvo, bem como
+        informações complementares sobre cada espécie Criticamente
+        em perigo e com Dados insuficientes, disponíveis no 
+        <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf">Anexo</a>. 
+        </p>
+    </div>
+</div>
+<div class="box-section box-project ">
+  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+            <a href="#" id="graomogol">
+                <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
+    </a>
+  </div>
+
+  <div class="description col-sm-8 col-md-8 col-lg-8">
+      <h4>
+          <a href="#" id="graomogol2">
+              PLANO DE AÇÃO NACIONAL PARA A CONSERVAÇÃO DA FLORA AMEAÇADA DE EXTINÇÃO DA REGIÃO DE GRÃO MOGOL - FRANCISCO SÁ
+          </a>
+      </h4>
+      <p>O <i>Plano de Ação Nacional para a conservação da flora ameaçada
+          de extinção da região de Grão Mogol-Francisco Sá</i> contém uma
+      série de ações elaboradas para mitigar as ameaças que incidem
+      neste território do Norte de Minas Gerais. Lá ocorrem 74
+      espécies da flora ameaçada. Este plano de ação apresenta
+      informações sobre aspectos ambientais, socioeconômicos e
+      histórico-culturais desse território, bem como informações
+      complementares sobre cada espécie Criticamente em perigo e com
+      Dados insuficientes, disponíveis no 
+      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf">Anexo</a>.
+      </p>
+  </div>
+</div>
+<div class="box-section box-project ">
+  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+                <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
+    </a>
+  </div>
+
+  <div class="description col-sm-8 col-md-8 col-lg-8">
+      <h4>
+          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+              FLORA AMEAÇADA DO CERRADO MINEIRO - GUIA DE CAMPO
+          </a>
+      </h4>
+      <p> <i>Flora ameaçada do Cerrado mineiro - guia de campo </i>traz
+      informações redigidas em uma linguagem acessível para um público
+      amplo, não especialista em botânica, visando aumentar o conhecimento
+      sobre 82 espécies (64 Criticamente em perigo de extinção e 18 com Dados
+      insuficientes) do Cerrado de Minas Gerais. O Guia de campo também auxilia a
+      implementação de ações de conservação recomendadas nos Planos de Ação
+      Nacional - PANs. 
+      </p>
+  </div>
+</div>
+<div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
     <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >
       <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
