--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -30,12 +30,13 @@
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">
+            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">-->
+            <a href="#" id="espinhaco" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
             <br/>
             <p>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
-            <br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>
+            <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
           </div>
@@ -45,24 +46,12 @@
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
             <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">
+            <a href="#" id="graomogol" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
           <div class="portfolio-overlay">
             <br/>
             <p>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
-            <br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>
-            </p>
-
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-        <div class="img breve">
-        <a href=""  data-toggle="modal" data-target="#breve-three">
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Em Breve<br/><br/>
-            Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Bacia do Alto Tocantins
+            <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
           </div>
@@ -76,6 +65,19 @@
           <div class="portfolio-overlay">
             <br/>
             <p>Flora ameaçada do Cerrado Mineiro - Guia de Campo
+            </p>
+
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img breve">
+        <a href=""  data-toggle="modal" data-target="#breve-three">
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/>
+            Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Bacia do Alto Tocantins
             </p>
 
           </div>
