--- a/templates/home.html
+++ b/templates/home.html
@@ -81,44 +81,55 @@
 
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">
+            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">-->
+            <a href="#" id="espinhaco" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">
+                    <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">-->
+                    <a href="#" id="espinhaco2" style="text-decoration: none;">
                         Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
                     </a>
                 </h3>
                 <p>O <i>Plano de Ação Nacional para a conservação da flora
-                    ameaçada de extinção da Serra do Espinhaço</i> contém uma série de
-                ações elaboradas para mitigar as ameaças que incidem em um
-                território definido onde ocorrem 256 espécies da flora
-                ameaçada, além de informações sobre aspectos ambientais,
-                socioeconômicos e histórico-culturais desse território, bem
-                como informações complementares disponíveis em um <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf">Anexo</a>. 
+                    ameaçada de extinção da Serra do Espinhaço Meridional </i>
+                    contém uma série de ações elaboradas para mitigar as
+                    ameaças que incidem neste território do estado de Minas
+                    Gerais. Na Serra do Espinhaço Meridional ocorrem 256
+                    espécies da flora ameaçada. Nesta publicação há informações
+                    sobre aspectos ambientais, socioeconômicos e
+                    histórico-culturais desse território alvo, bem como
+                    informações complementares sobre cada espécie Criticamente
+                    em perigo e com Dados insuficientes, disponíveis no 
+                    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf">Anexo</a>. 
                 </p>
             </div>
         </div>
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">
+            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">-->
+            <a href="#" id="graomogol" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">
+                    <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">-->
+                    <a href="#" id="graomogol2" style="text-decoration: none;">
                         Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
                     </a>
                 </h3>
-                <p>O <i>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da
-                    região de Grão Mogol-Francisco Sá</i> contém uma série de ações
-                elaboradas para mitigar as ameaças que incidem em um território
-                definido onde ocorrem 74 espécies da flora ameaçada, além de
+                <p>O <i>Plano de Ação Nacional para a conservação da flora ameaçada
+                    de extinção da região de Grão Mogol-Francisco Sá</i> contém uma
+                série de ações elaboradas para mitigar as ameaças que incidem
+                neste território do Norte de Minas Gerais. Lá ocorrem 74
+                espécies da flora ameaçada. Este plano de ação apresenta
                 informações sobre aspectos ambientais, socioeconômicos e
                 histórico-culturais desse território, bem como informações
-                complementares disponíveis em um <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf">Anexo</a>.
+                complementares sobre cada espécie Criticamente em perigo e com
+                Dados insuficientes, disponíveis no 
+                <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf">Anexo</a>.
                 </p>
             </div>
         </div>
@@ -134,15 +145,14 @@
                       Flora ameaçada do Cerrado Mineiro - Guia de Campo
                   </a>
               </h3>
-              <p><i>Flora ameaçada do Cerrado Mineiro - Guia de Campo</i> traz
-              informações redigidas em uma linguagem acessível à um público
-              amplo, não especialista em botânica, visando aumentar o
-              conhecimento sobre 82 espécies (64 Criticamente em perigo de
-              extinção e 18 com Dados insuficientes) do Cerrado de Minas
-              Gerais, além de auxiliar na implementação de ações de conservação
-              recomendadas nos Planos de Ação Nacional - PANs. 
+              <p> <i>Flora ameaçada do Cerrado mineiro - guia de campo </i>traz
+              informações redigidas em uma linguagem acessível para um público
+              amplo, não especialista em botânica, visando aumentar o conhecimento
+              sobre 82 espécies (64 Criticamente em perigo de extinção e 18 com Dados
+              insuficientes) do Cerrado de Minas Gerais. O Guia de campo também auxilia a
+              implementação de ações de conservação recomendadas nos Planos de Ação
+              Nacional - PANs. 
               </p>
-            </p>
           </div>
         </div>
       </section>
