--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -2,11 +2,12 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">
+            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">-->
+            <a href="#" id="espinhaco" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
-            <p>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
-            <br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>
+            <p style="line-height:1.5em">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
+            <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
           </div>
@@ -18,11 +19,12 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">
+            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">-->
+            <a href="#" id="graomogol" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
-            <br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>
+            <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
           </div>
