--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -11,6 +11,7 @@
     <script src="{{static_url}}/js/jquery.min.js"></script>
     <script src="{{static_url}}/js/bootstrap.min.js"></script>
     <script src="{{static_url}}/js/jquery.bxslider.min.js"></script>
+		<script src="{{static_url}}/js/download.js"></script>
     <script src="https://connect.facebook.net/en_US/sdk.js" type="text/javascript"></script>
 
     <script>
