--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -1,5 +1,6 @@
 <div class="doc">
 
+
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
       <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Grao_Mogol.pdf">
@@ -67,6 +68,18 @@
       </a>
     </div>
   </div>
+
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_primeira_reuniao_para_elaboracao_do_PAN_para_a_conservacao_da_flora_endemica_ameacada_do_RJ.pdf">
+          <img src="{{static_url}}/images/documentos/relatorio/relatorio_elaboracao_PAN_RJ.png"/>
+        <div class="portfolio-overlay">
+            <p style="font-size:large; line-height:1.65em">Relatório da primeira reunião para elaboração do PAN para a conservação da flora endêmica ameaçada do RJ.</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
   <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
           <a href="{{static_url}}/pdf/documentos/relatorio_Workshop.pdf">
