--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -2,14 +2,13 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">-->
-            <a href="#" id="espinhaco" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46" id="espinhaco" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
-            <p style="line-height:1.5em">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
-            <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>-->
+            <p style="line-height:1.5em">
+              Plano de Ação Nacional para a conservação da flora ameaçada
+              de extinção da Serra do Espinhaço Meridional
             </p>
-
           </div>
         </a>
       </div>
@@ -19,12 +18,10 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">-->
-            <a href="#" id="graomogol" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/45" id="graomogol" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
-            <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
           </div>
@@ -36,7 +33,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/40">
             <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
           <div class="portfolio-overlay">
             <p>Flora ameaçada do Cerrado Mineiro - Guia de Campo
@@ -51,7 +48,7 @@
 <div class="doc">
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >
+      <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/27" >
         <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
         <div class="portfolio-overlay">
           <p>
@@ -66,7 +63,7 @@
 <div class="doc">
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_áreas_prioritárias2014.pdf">
+      <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/28">
         <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
         <div class="portfolio-overlay">
           <p>
@@ -81,7 +78,7 @@
 <div class="doc">
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">
+      <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/29">
         <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
         <div class="portfolio-overlay">
           <p>
@@ -96,7 +93,7 @@
 <div class="doc">
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">
+      <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/26">
         <img src="{{static_url}}/images/livrovermelho.png" />
         <div class="portfolio-overlay">
           <p>
