--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,14 +1,14 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
     <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-        <a href="#" id="espinhaco">
+        <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46" id="espinhaco">
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
         </a>
     </div>
 
     <div class="description col-sm-8 col-md-8 col-lg-8">
         <h4>
-            <a href="#" id="espinhaco2">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46" id="espinhaco2">
                 PLANO DE AÇÃO NACIONAL PARA A CONSERVAÇÃO DA FLORA AMEAÇADA DE EXTINÇÃO DA SERRA DO ESPINHACO MERIDIONAL
             </a>
         </h4>
@@ -22,20 +22,20 @@
         histórico-culturais desse território alvo, bem como
         informações complementares sobre cada espécie Criticamente
         em perigo e com Dados insuficientes, disponíveis no 
-        <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf">Anexo</a>. 
+        <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46">Anexo</a>. 
         </p>
     </div>
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-            <a href="#" id="graomogol">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/45" id="graomogol">
                 <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
       <h4>
-          <a href="#" id="graomogol2">
+          <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/45" id="graomogol2">
               PLANO DE AÇÃO NACIONAL PARA A CONSERVAÇÃO DA FLORA AMEAÇADA DE EXTINÇÃO DA REGIÃO DE GRÃO MOGOL - FRANCISCO SÁ
           </a>
       </h4>
@@ -48,20 +48,20 @@
       histórico-culturais desse território, bem como informações
       complementares sobre cada espécie Criticamente em perigo e com
       Dados insuficientes, disponíveis no 
-      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf">Anexo</a>.
+      <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/45">Anexo</a>.
       </p>
   </div>
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/40">
                 <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
       <h4>
-          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+          <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/40">
               FLORA AMEAÇADA DO CERRADO MINEIRO - GUIA DE CAMPO
           </a>
       </h4>
@@ -77,13 +77,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >
+    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/27" >
       <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
+    <h4><a href="http://dspace.jbrj.gov.br/jspui/handle/doc/27" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
     Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso 
 
@@ -113,13 +113,13 @@
 
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_áreas_prioritárias2014.pdf">
+    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/28">
       <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_áreas_prioritárias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <h4><a href="http://dspace.jbrj.gov.br/jspui/handle/doc/28">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
@@ -134,13 +134,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">
+    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/29">
       <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
+    <h4><a href="http://dspace.jbrj.gov.br/jspui/handle/doc/29">PAN Faveiro de Wilson</a></h4>
     <p>
       O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
     </p>
@@ -148,13 +148,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">
+    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/26">
       <img src="{{static_url}}/images/livrovermelho.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
+    <h4><a href="http://dspace.jbrj.gov.br/jspui/handle/doc/26">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
     <p>
       O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
     <p>
