--- a/templates/home.html
+++ b/templates/home.html
@@ -79,16 +79,14 @@
       <h3 class="col-sm-12 col-md-12 col-lg-12 title "  >Destaques</h3>
     <div class="row">
 
-      <section class="col-sm-12 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">-->
-            <a href="#" id="espinhaco" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/42" id="espinhaco" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
             </a>
             <div class="inner">
                 <h3>
-                    <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Espinhaco Meridional.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf');" target="_blank" style="text-decoration: none;">-->
-                    <a href="#" id="espinhaco2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/42" id="espinhaco2" style="text-decoration: none;">
                         Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
                     </a>
                 </h3>
@@ -102,21 +100,19 @@
                     histórico-culturais desse território alvo, bem como
                     informações complementares sobre cada espécie Criticamente
                     em perigo e com Dados insuficientes, disponíveis no 
-                    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf">Anexo</a>. 
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/42">Anexo</a>. 
                 </p>
             </div>
         </div>
       </section>
-      <section class="col-sm-12 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;" class="image left box-img">-->
-            <a href="#" id="graomogol" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/41" id="graomogol" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
             </a>
             <div class="inner">
                 <h3>
-                    <!--<a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Grao Mogol.pdf" onclick="window.open('http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf');" target="_blank" style="text-decoration: none;">-->
-                    <a href="#" id="graomogol2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/41" id="graomogol2" style="text-decoration: none;">
                         Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
                     </a>
                 </h3>
@@ -129,19 +125,19 @@
                 histórico-culturais desse território, bem como informações
                 complementares sobre cada espécie Criticamente em perigo e com
                 Dados insuficientes, disponíveis no 
-                <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf">Anexo</a>.
+                <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/41">Anexo</a>.
                 </p>
             </div>
         </div>
       </section>
-      <section class="col-sm-12 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/40" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
             </a>
           <div class="inner">
               <h3>
-                  <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Flora ameacada cerrado mineiro-guia de campo.pdf">
+                  <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/40">
                       Flora ameaçada do Cerrado Mineiro - Guia de Campo
                   </a>
               </h3>
@@ -156,11 +152,11 @@
           </div>
         </div>
       </section>
-      <section class="col-sm-12 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" class="image left box-img"><img src="{{static_url}}/images/livro_vermelho_2014.jpg" alt="" /></a>
+          <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/27" class="image left box-img"><img src="{{static_url}}/images/livro_vermelho_2014.jpg" alt="" /></a>
           <div class="inner">
-            <h3><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf">Livro Vermelho da Flora do Brasil - Plantas Raras do Cerrado</a></h3>
+            <h3><a href="http://dspace.jbrj.gov.br/jspui/handle/doc/27">Livro Vermelho da Flora do Brasil - Plantas Raras do Cerrado</a></h3>
             <p>Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
               que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
               priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
@@ -170,12 +166,12 @@
           </div>
         </div>
       </section>
-      <section class="col-sm-12 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
+          <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/28" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
           <div class="inner">
             <h3>
-              <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf">
+              <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/28">
                 Áreas prioritárias para conservação e uso sustentável da flora brasileira ameçada de extinção
 
               </a>
@@ -184,12 +180,13 @@
           </div>
         </div>
       </section>
-      <section class="col-sm-12 col-md-6 col-lg-6">
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
+          <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/29" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
           <div class="inner">
             <h3>
-              <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson </a>
+              <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/29">PAN Faveiro de Wilson </a>
             </h3>
             <p>
             O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
